[package]
name = "miner"
version = "0.1.0"
authors = ["ipfs1024"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
clap = "2.33.3"
lazy_static = "1.4.0"
futures = "0.3.7"
http = "0.2.1"

# log
log = "0.4.11"

# scheduler
job_scheduler = "1.2.1"

# Serialize, Deserialize
serde = "1.0.116"
serde_derive = "1.0.116"

# rocket
rocket = "0.4.5"
rocket_cors = { version = "0.5.2", default-features = false }
rocket_upload = "0.1.0"

# kv-database
kvdb-rocksdb = "0.9.1"
tempdir = "0.3.7"
kvdb = "0.7.0"

failure = "0.1.8"
reqwest = "0.10.8"

chrono = "0.4.19"

## json
serde_json = "1.0.59"

## ipfs
ipfs-api = "0.7.2"


## substrate
substrate-subxt = "0.13.0"
sp-keyring = { version = "2.0.0", package = "sp-keyring" }
frame-support = { version = "2.0.0", package = "frame-support" }
frame-system = { version = "2.0.0", package = "frame-system" }
pallet-indices = { version = "2.0.0", package = "pallet-indices" }
sp-core = { version = "2.0.0", package = "sp-core" }
sp-runtime = { version = "2.0.0", package = "sp-runtime" }
sub-runtime = { git = "https://github.com/IPSE-TEAM/ipse-core.git", branch = "master", package = "node-runtime" }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }



[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]


