[package]
name = "miner"
version = "1.0.0"
authors = ["IPSE-TEAM"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.10.1"
clap = "2.33.3"
lazy_static = "1.4.0"
futures = "0.3.7"
reqwest = { version = "0.10.10", features = ["blocking", "json"] }

http = "0.2.2"

sodalite = "0.3.0"
blake2-rfc = { version = "0.2.18" }
schnorrkel = { version = "0.9.1", features = ["preaudit_deprecated", "u64_backend"], default-features = false }

# log
log = "0.4.11"
env_logger = "0.8.2"
yansi = "0.5"
# error
#anyhow = "1.0.36"
#thiserror = "1.0.23"


# rand
rand = "0.7.3"

# scheduler
job_scheduler = "1.2.1"

# Serialize, Deserialize
serde = "1.0.116"
serde_derive = "1.0.116"

# rocket
rocket = "0.4.6"
rocket_cors = { version = "0.5.2", default-features = false }
ubyte = "0.10.1"
hex = "0.4.2"
hex-literal = "0.3.1"

# tokio
#tokio = "0.3.5"

# kv-database
kvdb-rocksdb = "0.9.1"
tempdir = "0.3.7"
kvdb = "0.7.0"
failure = "0.1.8"
chrono = "0.4.19"
bip39 = "0.6.0-beta.1"

## json
serde_json = "1.0.59"

## ipfs
ipfs-api = "0.7.2"

## nix shells
shells = "0.2.0"
nix = "0.19.1"

## substrate tool
substrate-subxt = "0.13.0"
#substrate-subxt-proc-macro = "0.13.0"

## substrate
sp-keyring = { version = "2.0.0", package = "sp-keyring" }
frame-support = { version = "2.0.0", package = "frame-support" }
frame-system = { version = "2.0.0", package = "frame-system" }
pallet-indices = { version = "2.0.0", package = "pallet-indices" }
sp-core = { version = "2.0.0", package = "sp-core" }
sp-runtime = { version = "2.0.0", package = "sp-runtime" }
sub-runtime = { git = "https://github.com/IPSE-TEAM/ipse-core.git", branch = "ipse", package = "node-runtime" }
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }




[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]


